<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	<LinearLayout
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent" 
		android:orientation="vertical">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/server_host"
				/>
			<EditText android:id="@+id/hostedit"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/server_host" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/server_port"
				/>
			<EditText android:id="@+id/portedit"
				android:layout_width="fill_parent"
				android:inputType="number"
				android:layout_height="wrap_content"
				android:hint="@string/server_port" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/user"
				/>
			<EditText android:id="@+id/useredit"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/user" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/password"
				/>
			<EditText android:id="@+id/passwdedit"
				android:inputType="textPassword" 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/password" />

			<Button
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/save"
				android:onClick="saveSettings" />

	</LinearLayout>
</ScrollView>
